2014-05-07  Ondřej Bílka  <neleai@seznam.cz>

	[BZ #16876]
	* nptl/sockperf.c (client): Check socket return value.
	[BZ #16877]
	* nscd/selinux.c (nscd_request_avc_has_perm): Check if there is
	nscd security class.

2014-05-06  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/unix/sysv/linux/arm/nptl/unwind.h: File moved to ...
	* sysdeps/arm/unwind.h: ... here.

2014-05-06  Aurelien Jarno  <aurelien@aurel32.net>

	[BZ# 16916]
	* sysdeps/unix/sysv/linux/sparc/bits/eventfd.h (EFD_SEMAPHORE):
	Define.

2014-05-06  Vidya Ranganathan  <vidya@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/power7/strncpy.S: New file: Optimization.
	* sysdeps/powerpc/powerpc64/multiarch/strncpy.c: New file:
	multiarch strncpy for PPC64.
	* sysdeps/powerpc/powerpc64/multiarch/strncpy-ppc64.c: New file
	* sysdeps/powerpc/powerpc64/multiarch/strncpy-power7.S: New file
	* sysdeps/powerpc/powerpc64/multiarch/Makefile: Add strpcpy, stpncpy
	multiarch optimizations.
	* sysdeps/powerpc/powerpc64/multiarch/ifunc-impl-list.c:
	(__libc_ifunc_impl_list): Likewise.
	* sysdeps/powerpc/powerpc64/power7/stpncpy.S: New file: Optimization.
	* sysdeps/powerpc/powerpc64/multiarch/stpncpy.c: New file:
	multiarch stpncpy for PPC64.
	* sysdeps/powerpc/powerpc64/multiarch/stpncpy-ppc64.c: New file
	* sysdeps/powerpc/powerpc64/multiarch/stpncpy-power7.S: New file

2014-05-06  Andreas Schwab  <schwab@suse.de>

	[BZ #16912]
	* gmon/mcount.c (_MCOUNT_DECL): Use
	atomic_compare_and_exchange_bool_acq instead of
	catomic_compare_and_exchange_bool_acq.

2014-05-05  Roland McGrath  <roland@hack.frob.com>

	* elf/Makefile (others, install-bin): Remove pldd.
	(pldd-modules): Variable removed.
	($(objpfx)pldd): Target removed.
	* sysdeps/unix/sysv/linux/Makefile [$(subdir) = elf]
	(others, install-bin): Append pldd here.
	($(objpfx)pldd): New target.

	* sysdeps/gnu/errlist.awk (BEGIN): Emit an initial #define of ERR_MAX
	to 0, so the first #if test emitted later doesn't see it undefined.